# jmespath-extensions

./: CHANGELOG.md  Cargo.toml  IDEAS.md  LICENSE-APACHE  README.md  release-please-config.json  release-plz.toml
.github/workflows/: ci.yml  release-please.yml  release-plz.yml  release.yml
benches/: functions.rs
docs/: examples.md
examples/jpx/: Cargo.toml  README.md
examples/jpx/queries/: user-summary.jmespath
examples/jpx/src/: main.rs
examples/jpx/testdata/: orders.json  servers.json  users.json
jmespath_extensions/: CHANGELOG.md  Cargo.toml  README.md  build.rs  functions.toml
jmespath_extensions/benches/: functions.rs
jmespath_extensions/src/: array.rs  color.rs  computing.rs  datetime.rs  duration.rs  encoding.rs  expression.rs  format.rs  fuzzy.rs  geo.rs  hash.rs  ids.rs  jsonpatch.rs  lib.rs  math.rs  multi_match.rs  network.rs  object.rs  path.rs  phonetic.rs  random.rs  regex_fns.rs  registry.rs  semver_fns.rs  string.rs  text.rs  type_conv.rs  url_fns.rs  utility.rs  validation.rs
jmespath_extensions/tests/: example_validation.rs
jpx/: CHANGELOG.md  Cargo.toml  README.md  build.rs  demos.toml
jpx-lsp/: Cargo.toml  README.md
jpx-lsp/src/: main.rs
jpx/benches/: benchmark.sh  benchmark_baseline.txt  benchmark_results.txt  generate_test_data.py  test_large.json  test_medium.json  test_slurp.json  test_small.json
jpx/queries/: order-report.jmespath  server-stats.jmespath
jpx/src/: main.rs  repl.rs
jpx/testdata/: packages.json
jpx/tests/: integration.rs
src/: array.rs  common.rs  computing.rs  datetime.rs  duration.rs  encoding.rs  expression.rs  fuzzy.rs  hash.rs  ids.rs  lib.rs  math.rs  object.rs  path.rs  random.rs  regex_fns.rs  registry.rs  semver_fns.rs  string.rs  type_conv.rs  url_fns.rs  utility.rs  validation.rs
