[workspace]
members = [".", "jpx"]

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI
cargo-dist-version = "0.30.2"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "powershell"]
# Target platforms to build for
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Which actions to run on pull requests
pr-run-mode = "plan"
# Whether to consider the binaries in a package for distribution
# Only jpx (the CLI) should produce binaries
install-path = "CARGO_HOME"
# Don't generate an updater
install-updater = false
# Whether to auto-include files like READMEs, LICENSEs, and CHANGELOGs
auto-includes = true
# Allow CI scripts to be manually modified
allow-dirty = ["ci"]

[package]
name = "jmespath_extensions"
version = "0.3.0"
edition = "2024"
authors = ["Josh Rotenberg <joshrotenberg@gmail.com>"]
description = "Extended functions for JMESPath queries - 150+ functions for strings, arrays, dates, hashing, encoding, geo, and more"
license = "MIT OR Apache-2.0"
repository = "https://github.com/joshrotenberg/jmespath-extensions"
homepage = "https://github.com/joshrotenberg/jmespath-extensions"
documentation = "https://docs.rs/jmespath_extensions"
readme = "README.md"
keywords = ["jmespath", "json", "query", "transform", "filter"]
categories = ["data-structures", "parsing", "text-processing"]

[dependencies]
jmespath = "0.4"
serde_json = "1.0"

# Optional deps
md-5 = { version = "0.10", optional = true }
sha1 = { version = "0.10", optional = true }
sha2 = { version = "0.10", optional = true }
crc32fast = { version = "1.5", optional = true }
base64 = { version = "0.22", optional = true }
urlencoding = { version = "2.1", optional = true }
regex = { version = "1.5", optional = true }
url = { version = "2.5", optional = true }
uuid = { version = "1", features = ["v4"], optional = true }
hex = { version = "0.4", optional = true }
rand = { version = "0.8", optional = true }
chrono = { version = "0.4", optional = true }
strsim = { version = "0.11", optional = true }
rphonetic = { version = "3.0", optional = true }
geoutils = { version = "0.5", optional = true }
semver_crate = { package = "semver", version = "1.0", optional = true }
ipnetwork = { version = "0.20", optional = true }
nanoid = { version = "0.4", optional = true }
ulid = { version = "1.1", optional = true }

[features]
default = ["full"]
full = ["string", "array", "object", "math", "type", "utility", "validation", "path", "hash", "encoding", "regex", "url", "uuid", "rand", "datetime", "fuzzy", "expression", "phonetic", "geo", "semver", "network", "ids", "text", "duration", "color", "computing"]
core = ["string", "array", "object", "math", "type", "utility", "validation", "path", "expression"]
string = []
array = []
object = []
math = []
type = []
utility = []
validation = []
path = []
hash = ["dep:md-5", "dep:sha1", "dep:sha2", "dep:crc32fast"]
encoding = ["dep:base64", "dep:hex"]
regex = ["dep:regex"]
url = ["dep:url", "dep:urlencoding"]
uuid = ["dep:uuid"]
rand = ["dep:rand"]
datetime = ["dep:chrono"]
fuzzy = ["dep:strsim"]
expression = []
phonetic = ["dep:rphonetic"]
geo = ["dep:geoutils"]
semver = ["dep:semver_crate"]
network = ["dep:ipnetwork"]
ids = ["dep:nanoid", "dep:ulid"]
text = []
duration = []
color = []
computing = []

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "functions"
harness = false

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
