[workspace]
members = ["jmespath_extensions", "jpx"]
resolver = "2"

[workspace.package]
edition = "2024"
authors = ["Josh Rotenberg <joshrotenberg@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/joshrotenberg/jmespath-extensions"
homepage = "https://github.com/joshrotenberg/jmespath-extensions"

[workspace.dependencies]
# Core dependencies
jmespath = "0.4"
serde = "1.0"
serde_json = "1.0"

# CLI dependencies
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
anyhow = "1.0"
colored_json = "5"
atty = "0.2"

# Optional library dependencies
md-5 = "0.10"
sha1 = "0.10"
sha2 = "0.10"
crc32fast = "1.5"
base64 = "0.22"
urlencoding = "2.1"
regex = "1.5"
url = "2.5"
uuid = { version = "1", features = ["v4"] }
hex = "0.4"
rand = "0.8"
chrono = "0.4"
chrono-tz = "0.10"
strsim = "0.11"
rphonetic = "3.0"
geoutils = "0.5"
semver_crate = { package = "semver", version = "1.0" }
ipnetwork = "0.20"
nanoid = "0.4"
ulid = "1.1"
json-patch = "4.0"
aho-corasick = "1.1"

# Dev dependencies
criterion = { version = "0.5", features = ["html_reports"] }

# Internal crate
jmespath_extensions = { path = "jmespath_extensions", version = "0.5.0" }

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI
cargo-dist-version = "0.30.2"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "powershell"]
# Target platforms to build for
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Which actions to run on pull requests
pr-run-mode = "plan"
# Whether to consider the binaries in a package for distribution
# Only jpx (the CLI) should produce binaries
install-path = "CARGO_HOME"
# Don't generate an updater
install-updater = false
# Whether to auto-include files like READMEs, LICENSEs, and CHANGELOGs
auto-includes = true
# Allow CI scripts to be manually modified
allow-dirty = ["ci"]

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
