[package]
name = "jpx"
version = "0.1.1"
edition = "2021"
authors = ["Josh Rotenberg <joshrotenberg@gmail.com>"]
description = "JMESPath CLI with 150+ extended functions - a powerful jq alternative"
license = "MIT OR Apache-2.0"
repository = "https://github.com/joshrotenberg/jmespath-extensions"
homepage = "https://github.com/joshrotenberg/jmespath-extensions"
documentation = "https://github.com/joshrotenberg/jmespath-extensions/tree/main/jpx"
readme = "README.md"
keywords = ["jmespath", "json", "cli", "query", "jq"]
categories = ["command-line-utilities", "parsing", "text-processing"]

[[bin]]
name = "jpx"
path = "src/main.rs"

[dependencies]
jmespath = "0.4"
jmespath_extensions = { path = "..", version = "0.3.1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
serde = "1.0"
serde_json = "1.0"
anyhow = "1.0"
colored_json = "5"
atty = "0.2"
