[package]
name = "jpx"
version = "0.1.14"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "JMESPath CLI with 320+ extended functions - a powerful jq alternative"
documentation = "https://github.com/joshrotenberg/jmespath-extensions/tree/main/jpx"
readme = "README.md"
keywords = ["jmespath", "json", "cli", "query", "jq"]
categories = ["command-line-utilities", "parsing", "text-processing"]

[[bin]]
name = "jpx"
path = "src/main.rs"

[build-dependencies]
toml = "0.8"
serde = { workspace = true, features = ["derive"] }

[dependencies]
jmespath.workspace = true
jmespath_extensions = { workspace = true, features = ["full"] }
clap.workspace = true
clap_complete.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
colored_json.workspace = true
atty.workspace = true
rustyline = "15"
dirs = "6.0.0"
