[package]
name = "jpx"
version = "0.1.0"
edition = "2021"
description = "JMESPath CLI with extended functions"
license = "MIT OR Apache-2.0"
readme = "README.md"

[[bin]]
name = "jpx"
path = "src/main.rs"

[dependencies]
jmespath = "0.4"
jmespath_extensions = { path = "../..", features = ["full"] }
clap = { version = "4", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
colored_json = "5"
atty = "0.2"
